--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.3",
     "@mui/styled-engine-sc": "^6.1.2",
+    "@reduxjs/toolkit": "^2.2.8",
     "masonry-layout": "^4.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
     "react-responsive-masonry": "^2.3.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
